--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "nuxt": "^3.6.5"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.23.1"
+    "@vueuse/core": "^10.3.0",
+    "bootstrap-vue": "^2.23.1",
+    "swiper": "^10.1.0",
+    "vue-slick-carousel": "^1.0.6"
   }
 }
